--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         .img{
            width: 400px;
            height:80px;
-           background-image:url(https://plus.unsplash.com/premium_photo-1676346983513-dc681e696b9f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDQ1fHx8ZW58MHx8fHx8);
+           background-image:url("https://plus.unsplash.com/premium_photo-1676346983513-dc681e696b9f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDQ1fHx8ZW58MHx8fHx8");
            padding-top:20px;
            background-size: 100% 100%;
     }
@@ -156,7 +156,7 @@ button{
 .img{
            width: 100%;
            height:600px;
-           background-image:url(/marguerite-729510_1280.jpg);
+           background-image:url("https://plus.unsplash.com/premium_photo-1676346984116-bce6a412b580?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDQ2fHx8ZW58MHx8fHx8");
            padding-top:200px;
     }
 .lorem {
@@ -209,7 +209,7 @@ button{
               background-color: red;
               margin-left: 5%;
               margin-top:10px;
-              background-image: url(/IMG_20231009_213732.jpg);
+              background-image: url("https://plus.unsplash.com/premium_photo-1676070096493-1f6b0428020d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDQ3fHx8ZW58MHx8fHx8/IMG_20231009_213732.jpg");
               box-shadow:20px 20px 20px black;
               background-size: 100% 100%;
               
@@ -270,7 +270,7 @@ button{
   }
    @keyframes slide{
          10%{
-              background-image: url(/images1.jpeg);
+              background-image: url("https://plus.unsplash.com/premium_photo-1676346984116-bce6a412b580?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDQ2fHx8ZW58MHx8fHx8");
               background-size: 100% 100%;
          }
          20%{
