--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@ h2{
          <div class="content">
            <ul>
   <a href="home.html"><li>Home</li></a>
-             <li>About</li>
-             <li>Product</li>
-             <li>Review </li>
-             <li>Contact</li>
+   <a href="#"> <li>About</li></a>
+    <a href="#"> <li>Product</li> </a>
+    <a href="#">  <li>Review </li> </a>
+       <a href="#"> <li>Contact</li> </a>
            </ul>
          </div>
          <div class="logo">
