--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
            height:80px;
            background-image:url("https://plus.unsplash.com/premium_photo-1676346983513-dc681e696b9f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDQ1fHx8ZW58MHx8fHx8");
            padding-top:20px;
+	 background-repeat: no-repeat;
            background-size: 100% 100%;
     }
     .lorem {
@@ -577,18 +578,8 @@ h2{
       </div>
       <div class="prise">
         <h5>-40% <br><span
-        style="color: deeppink">$80.box2{
-        width: 100%;
-        height: 500px;
-        background-color:white;
-        text-align: center ;
-        font-size: 25px;
-        padding: 60px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif ;
-        padding-top: 100px;
-        border: 3px solid blueviolet;
-        box-sizing: border-box;
-        }.99</span><br><del>$300.99</del></h5>
+        style="color: deeppink"> $80 
+	.99</span><br><del>$300.99</del></h5>
       </div>
     </div>
             <div class="p">
